# Dogy.App-BackEnd

./: .gitignore  Dockerfile  Kik.txt  README.md  api.py  assistant.ipynb  assistant.js  assistant.py  dogy_companion.py  helpers.py  main.py  nutrition_api.py  nutrition_tracker.py  pyproject.toml  requirements.txt  startup.sh
.github/workflows/: dogy-assistant-api-AutoDeployTrigger-68c10be8-865f-4520-b894-dc137e095382.yml  main_dogyassistantapi.yml
prompts/: Discord Message.txt  Message (2).txt  Message (3).txt  sys.txt
